src/components/aboutItem/about-item.scss
.about-item {
  display: flex;
  flex-direction: column;
  overflow: visible;

  &:not(:last-child) {
    margin-bottom: 100px;
  }

  @media (min-width: $md) {
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;

    &.right {
      flex-direction: row-reverse;
    }
  }
}

.about-item__img {
  width: 70%;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 30px;
  text-align: center;

  @media (min-width: $md) {
    width: 30%;
    height: auto;
    margin-bottom: 0;

    &.img-0 {
      width: 25%;
    }
  }
}

.about-item__title {
  @include h4-text;
}

.about-item__content {
  width: 100%;

  @media (min-width: $md) {
    width: 60%;
  }
}

.about-item__description {
  margin-bottom: 50px;
}

.about-item__cta {
  @include primary-cta;
}

